namespace DataAccessLayer.Entities;

public class Admin : User
{
}
